feat: integrated with polars for the speeeeed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ keywords = ["cache", "api", "ai", "decorator", "etl"]
 dependencies = [
     "pandas",
     "pandera",
+    "polars",
     "requests",
     "python-dotenv",
     "dataset",
