--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,11 @@ classifiers = [
 keywords = ["cache", "api", "ai", "decorator", "etl"]
 dependencies = [
     "pandas",
-    "pandera",
+    "pandera[polars]",
     "polars",
+    "polars-lts-cpu",
+    "typing_extensions",
+    "dateparser",
     "requests",
     "python-dotenv",
     "dataset",
