--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,75 +1,15 @@
-[build-system]
-requires = ["setuptools>=45", "wheel"]
-build-backend = "setuptools.build_meta"
-
-[project]
-name = "magictables"
-version = "0.2.0"
-description = "Easy-to-use decorators for caching API responses and augmenting function calls with AI-generated data"
+[tool.poetry]
+name = "magictable"
+version = "0.5.0"
+description = "Simplifies ETL and Data Engineering workflows so you can focus on the Data Science work that matters"
+authors = ["Lewis <lewis@magictables.org>"]
+license = "MIT"
 readme = "README.md"
-authors = [{ name = "Lewis", email = "lewistham9x@gmail.com" }]
-license = { file = "LICENSE" }
-classifiers = [
-    "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-]
-keywords = ["cache", "api", "ai", "decorator", "etl"]
-dependencies = [
-    "pandas",
-    "pandera[polars]",
-    "polars",
-    "litellm",
-    "polars-lts-cpu",
-    "typing_extensions",
-    "dateparser",
-    "requests",
-    "python-dotenv",
-    "dataset",
-    "pytest",
-    "jina",
-    "PyPDF2",
-    "pre-commit",
-    "pydantic",
-]
-requires-python = ">=3.7"
 
-[project.optional-dependencies]
-dev = ["pytest", "pytest-cov", "black", "isort", "flake8"]
+[tool.poetry.dependencies]
+python = ">=3.9,<3.11"
 
-[project.urls]
-Homepage = "https://github.com/lewistham9x/magictables"
-Documentation = "https://github.com/lewistham9x/magictables#readme"
-Repository = "https://github.com/lewistham9x/magictables.git"
-Issues = "https://github.com/lewistham9x/magictables/issues"
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["magictables*"]
-exclude = ["tests*"]
-
-[tool.black]
-line-length = 88
-target-version = ['py37']
-include = '\.pyi?$'
-
-[tool.isort]
-profile = "black"
-line_length = 88
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
-
-[tool.pytest.ini_options]
-minversion = "6.0"
-addopts = "-ra -q"
-testpaths = [
-    "tests",
-]
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
