--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
-pandas>=1.4.3,<2.0.0
 requests
 python-dotenv
-dataset
-pandera
-pytest
-pre-commit
+polars
 polars-lts-cpu
-typing_extensions
 dateparser
-litellm<1.40.0
-pydantic<2.0.0
-parsee-core<0.1.5.6
+litellm
+pycozo
