feat: major refactor

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ neo4j = "^5.22.0"
 pyarrow = "^17.0.0"
 aiofiles = "^24.1.0"
 spycy-aneeshdurg = "^0.0.3"
+py2neo = "^2021.2.4"
+networkx = "^3.3"
 
 [tool.poetry.group.m1mac.dependencies]
 polars-lts-cpu = { version = "^1.2.1", platform = "darwin", markers = "platform_machine == 'arm64'" }
