--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ aiofiles = "^24.1.0"
 spycy-aneeshdurg = "^0.0.3"
 py2neo = "^2021.2.4"
 networkx = "^3.3"
+pypdf2 = "^3.0.1"
 
 [tool.poetry.group.m1mac.dependencies]
 polars-lts-cpu = { version = "^1.2.1", platform = "darwin", markers = "platform_machine == 'arm64'" }
